src/sass/theme/reset.scss
/* ... */
.stick-to-bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

$appHeaderHeight: 80px;

.appWrapper {
    min-height: 400px;
    clear: both;

    @extend .height-100;

    .appContainer {
        height: 100%;
        padding: 0px;
        position: relative;

        .appLeftCol, .appRightCol {
            height: 100%;
            float: left;
            position: relative;
        }

        .appLeftCol {
            width: 25%;
        }

        .appRightCol {
            width: 75%;
            padding-bottom: $appHeaderHeight;
        }

        .appBody {
            height: 100%;
            overflow-y: auto;
            overflow-x: hidden;
            background-color: $white;
            border-right: 1px solid $muted;

            .appBodyContainer {
                position: relative;
                padding-bottom: 20px;

                .appPage {
                    padding: 10px 40px 20px 40px;

                }
            }
        }

        .appHeader {
            border-bottom: 1px solid $muted;
            padding: 0px;

            height: $appHeaderHeight;
            border-right: 1px solid $muted;

            .appHeaderContent {
                padding: 20px 40px;
            }

            h1 {
                font-size: 24px;
                font-weight: $bold;
                padding: 10px 0px 10px 0px;
                margin: 0px;
                color: $darkgray-dark;

                small {
                    color: $text-muted;
                    font-size: 20px;
                }

                &.pageTitle {
                    @include networkPrimaryBG('color');
                }
            }

            span {
                font-size: 14px;
                font-weight: $normal;
                color: $darkgray-light;
            }
        }
    }
}

//--- navbar ---

.navbar {
    margin: 0px;
    border-radius: 0px;
    @include networkPrimaryBG('background-color');
    border: 0px;
    position: relative;
    z-index: 10;
    height: 60px;

    .navbar-header {
        padding: 16px 0px 0px 0px;

        .navbar-brand {
            margin: 0px 0px 0px 0px;
            padding: 0px;
            height: auto;

            img {
                border: 0px;
                margin: 0px;
                width: 160px;
            }
        }
    }

    .navbar-nav {
        margin: 0px 0px 0px 80px;
        padding-left: 40px;
        height: 60px;

        li {
            height: 100%;

            a {
                padding: 10px 20px;
                margin: 10px;
                background: transparent;
                color: $white;
                font-size: 16px;
                font-weight: $normal;
                border-radius: 3px;

                &:active, &:focus, &:hover {
                    color: $white;
                    background: none;
                    background-color: transparent;
                }
            }

            &.active {
                a {
                    @include networkPrimaryBGActive('background-color');

                    &:active, &:focus, &:hover {
                        @include networkPrimaryBGActive('background-color');
                    }
                }
            }
        }

        &.navbar-right {
            li {
                a {
                    padding:10px 0px;
                }
            }
        }
    }

    .searchbar {
        float: right;
        font-size: 0;
        margin-top: 13px;
        margin-right: 20px;

        .searchbar-inner {
            font-size: $font-size-base;
            display: inline-block;
            padding: 6px;
            background-color: #508ad3;
            border-radius: 3px;
        }

        .searchbar-input-container {
            overflow: hidden;
        }

        .searchbar-input {
            float: left;
            font-size: 12px;
            font-family: $font-family-monospace;
            line-height: 20px;
            height: 20px;
            color: #fff;
            padding: 0;
            width: 198px;
            transition: width 0.2s ease-in;
            border: none;
            background-color: transparent;

            &.active {
                width: 265px;
            }

            &::-webkit-input-placeholder {
                font-family: $font-family-sans-serif;
                color: #ddd;
            }
            &::-moz-placeholder {
                font-family: $font-family-sans-serif;
                color: #ddd;
            }
            &:-ms-input-placeholder {
                font-family: $font-family-sans-serif;
                color: #ddd;
            }
        }

        .searchbar-submit {
            float: right;
            width: 30px;
            height: 20px;
            line-height: 20px;
            text-align: center;
            background-color: transparent;
            padding: 0;
            border: none;

            .glyphicon-search {
                color: #fff;
            }
        }
    }

    .lang {
        float: right;
        line-height: 60px;
    }

    .lang-active {
        display: inline-block;
        line-height: 30px;
        position: relative;

        &.open > .dropdown-menu {
            left: auto;
            right: 0;
            min-width: initial;
            width: 7em;
        }

        & > a {
            display: block;
            line-height: 16px;
            font-size: 14px;
            color: #fff;
            padding: 5px 10px;
            background: #052748;
            border-radius: 5px;

            &:focus, &:hover {
                text-decoration: none;
            }
        }

        .dropdown-menu > li > a {
            padding: 3px 22px;
            text-align: right;
        }
    }

}

.appNav {
    .btn {
        height: 64px;
        border: 0px;
        border-radius: 0px;
        font-weight: $semi-bold;
        font-size: 16px;
    }
}
/* ... */

